PR c++/84080 - ICE with return type deduction and specialization.

* pt.c (determine_specialization): Check uses_template_parms.

From-SVN: r257630